fix: overflow style link and label in search page

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -547,6 +547,11 @@ a.no-decoration {
 #search-page-container .results ul > li .label {
     color: #1a0dab !important;
     font-size: 1.2em !important;
+    width: 75%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
 }
 
 #search-page-container .results ul > li .creator { 
@@ -562,6 +567,11 @@ a.no-decoration {
 #search-page-container .results ul > li .link {
     color: #006621 !important;
     font-size: .9em !important;
+    width: 75%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
 }
 
 #search-page-container .title p > small {
